fixed about text spacing

--- a/main.css
+++ b/main.css
@@ -299,8 +299,8 @@ canvas {
     background-image: url('darkfloral.png');
     background-attachment: fixed;
     padding-bottom: 80px;
-    background-color: rgba(127, 255, 212, 0.1);
-    background-blend-mode: color-dodge;
+    /* background-color: rgba(127, 255, 212, 0.2);
+    background-blend-mode: color-burn; */
 }
 
 #portfolio .section {
@@ -311,7 +311,7 @@ canvas {
 #portfolio-header {
     padding-left: 80px;
     color: white;
-    mix-blend-mode: difference;
+    mix-blend-mode: exclusion;
 }
 
 /* Project Tiles */
